--- a/home.html
+++ b/home.html
@@ -2,16 +2,17 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>NieLearn</title>
+    <title>Easy Learning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <script src='./script.js' defer></script>
     <script src="tool.js"></script>
     <script src="https://kit.fontawesome.com/557f0c19d3.js" crossorigin="anonymous"></script></head>
 </head>
 <body>
-    <nav>
-        <h3>NieLearn</h3>
+    <nav id="nav">
+        <a onclick="loadDashboard()"><div><h3>Easy Learning</h3></div></a>
         <a onclick="loadDashboard()"><div><i id="active" class="fa-solid fa-house"></i></div></a>
         <a onclick="addLektion()"><div><i class="fa-solid fa-plus"></i></div></a>
         <a onclick="searchLektion()"><div><i class="fa-solid fa-magnifying-glass"></i></div></a>
