--- a/home.html
+++ b/home.html
@@ -12,13 +12,7 @@
     <script src="https://kit.fontawesome.com/557f0c19d3.js" crossorigin="anonymous"></script></head>
 </head>
 <body>
-    <nav id="nav">
-        <a onclick="loadDashboard()"><div><h3>Easy Learning</h3></div></a>
-        <a onclick="loadDashboard()"><div><i id="active" class="fa-solid fa-house"></i></div></a>
-        <a onclick="addLektion()"><div><i class="fa-solid fa-plus"></i></div></a>
-        <a onclick="searchLektion()"><div><i class="fa-solid fa-magnifying-glass"></i></div></a>
-        <a onclick="changeMode()"><div id="switch"><i class="fa-solid fa-toggle-on"></i></div></a>
-    </nav>
+    <nav id="nav"></nav>
     <div id="content"></div>
 </body>
 </html>
