--- a/home.html
+++ b/home.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <script src="lektion.js" defer></script>
     <script src='script.js' defer></script>
-    <script src="tool.js"></script>
-    <script src="tasks.js"></script>
+    <script src="tool.js" defer></script>
+    <script src="tasks.js" defer></script>
     <script src="https://kit.fontawesome.com/557f0c19d3.js" crossorigin="anonymous"></script></head>
 </head>
 <body>
