--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <script src="lektion.js" defer></script>
     <script src='script.js' defer></script>
-    <script src="tool.js" defer></script>
+    <script src="tools.js" defer></script>
     <script src="tasks.js" defer></script>
     <script src="https://kit.fontawesome.com/557f0c19d3.js" crossorigin="anonymous"></script></head>
 </head>
