--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <script src='script.js' defer></script>
     <script src="tools.js" defer></script>
     <script src="tasks.js" defer></script>
+    <script src="online.js" defer></script>
     <script src="https://kit.fontawesome.com/557f0c19d3.js" crossorigin="anonymous"></script></head>
 </head>
 <body>
