--- a/home.html
+++ b/home.html
@@ -11,10 +11,11 @@
     <script src="tools.js" defer></script>
     <script src="tasks.js" defer></script>
     <script src="online.js" defer></script>
-    <script src="https://kit.fontawesome.com/557f0c19d3.js" crossorigin="anonymous"></script></head>
+    <script src="https://kit.fontawesome.com/557f0c19d3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
     <nav id="nav"></nav>
-    <div id="content"></div>
+    <div id="content"><p>yanik is the coolest</p></div>
 </body>
 </html>
